--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "node backend/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.0.3",
-    "body-parser": "^1.20.2",
-    "node-fetch": "^2.6.7"
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
