--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "uma-somauma",
   "version": "1.0.0",
+  "description": "Assistente UMA da Somauma",
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
