--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "uma-somauma",
   "version": "1.0.0",
-  "description": "Assistente UMA da Somauma",
   "main": "backend/server.js",
-  "scripts": {
-    "start": "node backend/server.js"
-  },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
