--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "uma-somauma",
   "version": "1.0.0",
   "main": "backend/server.js",
+  "scripts": {
+    "start": "node backend/server.js"
+  },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
+    "axios": "^1.6.0",
     "express": "^4.18.2"
   }
 }
