--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "uma-somauma",
   "version": "1.0.0",
@@ -6,7 +7,9 @@
     "start": "node backend/server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.5.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
