--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "node backend/server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.18.2"
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2"
   }
 }
