--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "uma-somauma",
+  "name": "uma-somauma-natural",
   "version": "1.0.0",
-  "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js"
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2"
+    "express": "^4.18.2"
   }
 }
