--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "uma-somauma-natural",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "node backend/server.js"
-  },
-  "dependencies": {
-    "axios": "^1.6.7",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
-  }
+    "name": "uma-somauma",
+    "version": "1.0.0",
+    "main": "backend/server.js",
+    "scripts": {
+        "start": "node backend/server.js"
+    },
+    "dependencies": {
+        "express": "^4.18.2",
+        "openai": "^4.21.1"
+    }
 }
